# teamtalk_reg_system

./: .env.example  .gitignore  README.md  install.sh  main.py  pyproject.toml  rebuild.sh  tt.py
app/: __init__.py  admin_routes.py  config.py  i18n.py  logging_config.py  manager.py  ntfy.py  routes.py  scheduler.py  tt_bot.py  tt_file.py
app/static/: manifest.json  style.css  sw.js
app/templates/: admin_dashboard.html  admin_login.html  base.html  success.html
