[project]
name = "teamtalk-reg-system"
version = "0.1.0"
description = "A FastAPI web application for registering users on a TeamTalk server. Created by Deniz Sincar (denizsincar.ru)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.123.5",
    "jinja2>=3.1.6",
    "py-talk-ex>=2.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
